tests/golden/type_errors/generic_out_of_scope_type_parameter.cd
let value: T = 1;
