tests/golden/type_errors/generic_out_of_scope_type_parameter.err
Type error at 1:12: unknown type `T`
  let value: T = 1;
             ^
